kubernetes/other/extra-ops/nebula-231208/basic-components/resources/docker.registry.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-docker-registry-ingress
  labels:
    app.kubernetes.io/name: docker-registry-ingress
    app.kubernetes.io/instance: my-docker-registry-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: alidns-webhook-letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: 5g
spec:
  rules:
    - host: docker-registry-nebula.lab.zjvis.net
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: my-docker-registry
                port:
                  number: 5000
  tls:
    - hosts:
        - docker-registry-nebula.lab.zjvis.net
      secretName: docker-registry-nebula.lab.zjvis.net-tls
